# anthropic-batch-manager

./: CLAUDE.md  DESIGN.md  README.md  SKILL.md  plan.md  pyproject.toml
batch_compiler/: __init__.py  batch_client.py  compiler.py  errors.py  executor.py  graph.py  task.py  template.py  yaml_loader.py
scripts/: tune_batch_threshold.py
tests/: test_compiler.py  test_executor.py  test_graph.py  test_task.py  test_template.py  test_yaml_loader.py
